[package]
name = "beams"
description = "Pusher Beams Rust Server SDK"
version = "0.1.0"
authors = ["Luka Bratos <luka.bratos@gmail.com>"]
license = "MIT"

[lib]
name = "beams"
path = "src/lib.rs"

[[bin]]
name = "beams"
path = "src/bin.rs"

[dependencies]
ureq = { version = "0.4.5", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
